# safe_unzip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  safe_unzip_spec.md
.github/workflows/: ci.yml  release.yml
python/: Cargo.toml  pyproject.toml
python/python/safe_unzip/: __init__.py  __init__.pyi  __main__.py
python/src/: lib.rs
python/tests/: test_safe_unzip.py
src/: async_extractor.rs  driver.rs  error.rs  extractor.rs  lib.rs  policy.rs
src/adapter/: mod.rs  sevenz_adapter.rs  tar_adapter.rs
tests/: async_test.rs  cli_test.rs  policy_test.rs  security_test.rs  tar_test.rs
