[package]
name = "safe_unzip"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tenuo-ai/safe_unzip"
homepage = "https://tenuo.dev"
authors = ["Niki A. <dev@tenuo.dev>"]
description = "Secure zip extraction. Prevents Zip Slip and Zip Bombs."
keywords = ["zip", "security", "archive", "extraction", "safe"]
categories = ["filesystem", "compression"]

[workspace]
members = [".", "python"]

[features]
default = []
async = ["tokio"]

[dependencies]
path_jail = "0.2"
# Use minimal zip features to avoid heavy compression dependencies
zip = { version = "2.1", default-features = false, features = ["deflate", "time"] }
tar = "0.4"
flate2 = "1"  # For .tar.gz support
tokio = { version = "1", features = ["rt", "fs", "sync"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
