[package]
name = "safe_unzip"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tenuo-ai/safe_unzip"
homepage = "https://tenuo.dev"
authors = ["Niki A. <dev@tenuo.dev>"]
description = "Secure zip extraction. Prevents Zip Slip and Zip Bombs."
keywords = ["zip", "security", "archive", "extraction", "safe"]
categories = ["filesystem", "compression"]

[workspace]
members = [".", "python"]

[features]
default = []
tar = ["dep:tar", "dep:flate2"]  # Enable tar/tar.gz support
async = ["tokio"]
sevenz = ["dep:sevenz-rust", "dep:tempfile"]  # Enable 7z support
cli = ["clap", "clap_complete", "tar"]  # CLI includes TAR support by default

[[bin]]
name = "safe_unzip"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
path_jail = "0.2"
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
# Use minimal zip features to avoid heavy compression dependencies
zip = { version = "2.1", default-features = false, features = ["deflate", "time"] }
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }  # For .tar.gz support
glob-match = "0.2"  # For include/exclude patterns
sevenz-rust = { version = "0.6", optional = true }  # For 7z support
tempfile = { version = "3", optional = true }  # For 7z from bytes
tokio = { version = "1", features = ["rt", "fs", "sync"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
