[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "safe-unzip"
version = "0.1.0"
description = "Secure zip extraction. Prevents Zip Slip and Zip Bombs."
readme = "../README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Niki A.", email = "dev@tenuo.dev"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Archiving :: Compression",
]
keywords = ["zip", "security", "archive", "extraction", "safe", "zip-slip", "zip-bomb"]

[project.urls]
Homepage = "https://github.com/tenuo-ai/safe_unzip"
Repository = "https://github.com/tenuo-ai/safe_unzip"

[tool.maturin]
python-source = "python"
module-name = "safe_unzip._safe_unzip"
features = ["pyo3/extension-module"]

